# CraftTable

./: CMakeLists.txt  FileManagement.cpp  FileManagement.h  MainWindow.cpp  MainWindow.h  README.md  TaskEditDialog.cpp  TaskEditDialog.h  TaskEditWidget.cpp  TaskEditWidget.h  TaskInfo.cpp  TaskInfo.h  TaskView.cpp  TaskView.h  TaskViewItem.cpp  TaskViewItem.h  TimeEditor.cpp  TimeEditor.h  TrayView.cpp  TrayView.h  logo.rc  main.cpp  res.qrc
UserControl/: AbstractDataSelector.cpp  AbstractDataSelector.h  DateTimeEditor.cpp  DateTimeEditor.h  MonthDaySelector.cpp  MonthDaySelector.h  NumSelector.cpp  NumSelector.h
model/: BaseInfo.cpp  BaseInfo.h  CountdownDayInfo.cpp  CountdownDayInfo.h  DailyTask.cpp  DailyTask.h  LongTaskInfo.cpp  LongTaskInfo.h  ModelType.h  ScheduleInfo.cpp  ScheduleInfo.h  TaskBuilder.cpp  TaskBuilder.h  TaskInfo.cpp  TaskInfo.h
res/style/: style.qss
utility/: Utility.cpp  Utility.h
